objects/FieloEE__Member__c.object
<CustomObject>
    <description>Members of your Fielo programs.</description>
    <fields>
        <fullName>FieloEE__Age__c</fullName>
        <description>Age of the member</description>
        <formula>IF ( OR ( MONTH (  FieloEE__Birthdate__c  ) &gt; MONTH (TODAY()), AND( MONTH ( FieloEE__Birthdate__c ) = MONTH (TODAY()), DAY ( FieloEE__Birthdate__c ) &gt;= DAY (TODAY()+1))), YEAR (TODAY()) - YEAR ( FieloEE__Birthdate__c ) -1, YEAR (TODAY()) - YEAR ( FieloEE__Birthdate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter the age of the member.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__AgreementReadOnly__c</fullName>
        <description>Shows and allows member to check the current Agreement</description>
        <formula>HYPERLINK(&apos;/&apos; +  FieloEE__Agreement__c , FieloEE__Agreement__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link for the agreement checked by the member</description>
        <label>Agreement</label>
        <referenceTo>FieloEE__Agreement__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__ApprovedReadOnly__c</fullName>
        <formula>IF(  FieloEE__Approved__c , IMAGE(&apos;/resource/&apos;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&apos;images/checked.png&apos;, $Label.fieloee__approved) , IMAGE(&apos;/resource/&apos;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&apos;images/unchecked.png&apos;, $Label.fieloee__notapproved) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The approval status of this member. If you do not have an approval process, the status will be always &quot;Yes&quot;.</description>
        <inlineHelpText>If you have an approval process for your members registration, the approval status is reflected in this field. If you do not have an approval process, the status will be always â€œYesâ€�.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Birthdate__c</fullName>
        <description>Birth date for this member.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the member&apos;s birth date.</inlineHelpText>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__City__c</fullName>
        <description>The city where this member lives.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the city where the member lives.</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Country__c</fullName>
        <description>The country of this member.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the country where the member lives.</inlineHelpText>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__DaysLastTransaction__c</fullName>
        <description>Quantity of days from last transaction</description>
        <formula>TODAY()  -  FieloEE__LastTransactionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Transaction (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Email__c</fullName>
        <description>Email of this member.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you do not enter an email account, the system will create one of the form &quot;name.lastname@fielo.com&quot;.</inlineHelpText>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FieloEE__EnabledStatusReadOnly__c</fullName>
        <formula>IF( FieloEE__Enabled__c , IMAGE(&apos;/resource/&apos;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&apos;images/checked.png&apos;, $Label.fieloee__enabled) , IMAGE(&apos;/resource/&apos;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&apos;images/unchecked.png&apos;, $Label.fieloee__notenabled) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enabled Status (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this member participates of the program. &quot;Enabled&quot; members are members participating of the program; &quot;Not enabled&quot; members no longer participate of the program.</description>
        <inlineHelpText>All members are â€œEnabledâ€� by default. When members are â€œNot enabledâ€� they no longer participate of the program but they still remain members.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__FirstName__c</fullName>
        <description>First name of this member.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the first name of this member.</inlineHelpText>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Gender__c</fullName>
        <description>The gender of this member.</description>
        <inlineHelpText>Enter the gender for this member.</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__IdentificationCode__c</fullName>
        <description>ID number of this member.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Here you can see the ID number of this member.</inlineHelpText>
        <label>Identification Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieloEE__IdentificationType__c</fullName>
        <description>The type of personal document of this member.</description>
        <inlineHelpText>Pick the type of personal document of this member.</inlineHelpText>
        <label>Identification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Identification__c</fullName>
        <formula>TEXT( FieloEE__IdentificationType__c )  +  FieloEE__IdentificationCode__c</formula>
        <label>Identification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__IsActive__c</fullName>
        <description>Status of the member.</description>
        <formula>IF( FieloEE__User__r.IsActive == True, &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__LastName__c</fullName>
        <description>Last name of this member.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the last name of this member.</inlineHelpText>
        <label>Last Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__LastTransactionDateReadOnly__c</fullName>
        <description>Formula field to get the last transaction date.</description>
        <formula>FieloEE__LastTransactionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Transaction Date (Read Only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__LastTransactionDate__c</fullName>
        <description>The date of the last transaction performed by this member.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date of the last transaction performed by this member.</inlineHelpText>
        <label>Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__LevelReadOnly__c</fullName>
        <formula>FieloEE__Level__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The level of this member.</description>
        <inlineHelpText>Here you can see to what level the member belongs.</inlineHelpText>
        <label>Level</label>
        <referenceTo>FieloEE__Level__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__LoyaltyAge__c</fullName>
        <description>Deprecated Field</description>
        <formula>(MONTH(TODAY()) + YEAR(TODAY()) * 12) - ( MONTH(FieloEE__StartDate__c) + YEAR(FieloEE__StartDate__c)* 12 ) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zz_deprecated_Loyalty Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__MediaPoints__c</fullName>
        <label>Points Average</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__MemberCodeReadOnly__c</fullName>
        <formula>FieloEE__MemberCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Code (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__MemberCode__c</fullName>
        <description>Deprecated Field</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>zz_deprecated_Member Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieloEE__MobilePhone__c</fullName>
        <description>The cell phone number of this member.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the cell phone of the member.</inlineHelpText>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FieloEE__Name__c</fullName>
        <description>Name of the member</description>
        <formula>FieloEE__FirstName__c  &amp;&apos; &apos; &amp; FieloEE__LastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Neighborhood__c</fullName>
        <description>The neighborhood where your member lives.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the neighborhood where the member lives.</inlineHelpText>
        <label>Neighborhood</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__NetPoints__c</fullName>
        <description>Deprecated Field</description>
        <formula>FieloEE__Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zz_deprecated_Net Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__OperatorCode__c</fullName>
        <description>Deprecated Field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>zz_deprecated_Operator Code</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieloEE__OperatorPassword__c</fullName>
        <description>Deprecated Field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>zz_deprecated_Operator Password</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Phone__c</fullName>
        <description>Phone number of this member.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the member&apos;s phone number.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FieloEE__PointsReadOnly__c</fullName>
        <description>Formula for grouping all available points</description>
        <formula>FieloEE__Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points (Read Only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Points__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of points of this member.</description>
        <inlineHelpText>Here you can see the number of points of this member.</inlineHelpText>
        <label>Points</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Preference__c</fullName>
        <description>Deprecated Field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>zz_deprecated_Preference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ProfileCompletenessReadOnly__c</fullName>
        <description>Formula to get the profile completness</description>
        <formula>FieloEE__ProfileCompleteness__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Completeness (Read Only)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FieloEE__ProfileCompleteness__c</fullName>
        <description>The dregree of completeness of this member&apos;s profile.</description>
        <inlineHelpText>Here you can see how complete is the member&apos;s profile.</inlineHelpText>
        <label>Profile completeness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FieloEE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program to which this member belongs.</description>
        <inlineHelpText>Select the program to which the member belongs.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__RedeemPointsPercent__c</fullName>
        <description>The percentage of points redeemed by this member.</description>
        <inlineHelpText>Here you can see the percentage of points redeemed by the member.</inlineHelpText>
        <label>Percent of Points Redeemed</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__ReferalMemberReadOnly__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  FieloEE__ReferalMember__c ,  FieloEE__ReferalMember__r.FieloEE__Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referal Member (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ReferalMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referal Member</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Members Referrals</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__RegisteredReadOnly__c</fullName>
        <formula>IF( FieloEE__Registered__c , IMAGE(&apos;/resource/&apos;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&apos;images/checked.png&apos;, $Label.fieloee__registered) , IMAGE(&apos;/resource/&apos;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&apos;images/unchecked.png&apos;, $Label.fieloee__notregistered) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Members are â€œRegisteredâ€� if they have created an user in the members&apos; portal.</inlineHelpText>
        <label>Registered (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the member has created an user for the members&apos; portal.</description>
        <inlineHelpText>Members are â€œRegisteredâ€� if they have created an user in the members&apos; portal.</inlineHelpText>
        <label>Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__StartDateReadOnly__c</fullName>
        <formula>FieloEE__StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date (Read Only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date when this member registered in the program.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date when the member registered in the program.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__State__c</fullName>
        <description>The state or province where this member lives.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the state or province where the member lives.</inlineHelpText>
        <label>State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Status__c</fullName>
        <formula>IF(   $User.IsActive == false  ,  $Label.fieloee__inactive , $Label.fieloee__active )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loyalty Program Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Street__c</fullName>
        <description>The street where this member lives.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the street where the member lives.</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__TotalRedeemPoints__c</fullName>
        <description>Number of points redeedmed by this member.</description>
        <inlineHelpText>Enter the total of points redeemed by this member.</inlineHelpText>
        <label>Total Points Redeemed</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__TotalRedeemValue__c</fullName>
        <description>Total transactions (in currency) realized by the member</description>
        <label>Total Value Redeemed</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloEE__TotalRedeem__c</fullName>
        <description>Number of orders redeemed by this member.</description>
        <inlineHelpText>Enter the number of redemption orders redeemed by this member.</inlineHelpText>
        <label>Total Orders Redeemed</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__TotalTransactions__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of transactions performed by this member.</description>
        <inlineHelpText>Enter the number of transactions performed by this member.</inlineHelpText>
        <label>Total Transactions</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__TotalValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Total Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloEE__Type__c</fullName>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                    <default>true</default>
                    <label>Member</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__UserReadOnly__c</fullName>
        <description>Formula link to user</description>
        <formula>HYPERLINK(&apos;/&apos; +  FieloEE__User__c ,  FieloEE__User__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user of this member in the members&apos; portal.</description>
        <inlineHelpText>Enter the member&apos;s user or handle in the member&apos;s portal.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__ZipCode__c</fullName>
        <description>The zip code for this member.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the member&apos;s ZIP code.</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__imageId__c</fullName>
        <description>The ID of the image uploaded by this member.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the ID of this member&apos;s image.</inlineHelpText>
        <label>imageId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Member</label>
    <listViews>
        <fullName>FieloEE__All_Members</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Program__c</columns>
        <columns>FieloEE__Name__c</columns>
        <columns>FieloEE__Email__c</columns>
        <columns>FieloEE__PointsReadOnly__c</columns>
        <columns>FieloEE__Level__c</columns>
        <columns>FieloEE__User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Members</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__Birthdate</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Name__c</columns>
        <columns>FieloEE__Level__c</columns>
        <columns>FieloEE__MemberCode__c</columns>
        <columns>FieloEE__Age__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__LoyaltyAge__c</columns>
        <columns>FieloEE__StartDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloEE__Birthdate__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Birthdate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__InactiveMembers</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__UserReadOnly__c</columns>
        <columns>FieloEE__LastTransactionDateReadOnly__c</columns>
        <columns>FieloEE__Name__c</columns>
        <columns>FieloEE__LevelReadOnly__c</columns>
        <columns>FieloEE__IdentificationType__c</columns>
        <columns>FieloEE__IdentificationCode__c</columns>
        <columns>FieloEE__MemberCode__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__LastTransactionDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloEE__IsActive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filters>
        <label>Inactive Members</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__MembersWithoutUser</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>FieloEE__Age__c</columns>
        <columns>FieloEE__MobilePhone__c</columns>
        <columns>FieloEE__City__c</columns>
        <columns>FieloEE__Country__c</columns>
        <columns>FieloEE__DaysLastTransaction__c</columns>
        <columns>FieloEE__Email__c</columns>
        <columns>FieloEE__Enabled__c</columns>
        <columns>FieloEE__FirstName__c</columns>
        <columns>FieloEE__Gender__c</columns>
        <columns>FieloEE__LastName__c</columns>
        <columns>FieloEE__Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloEE__User__c</field>
            <operation>equals</operation>
        </filters>
        <label>Members Without User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__New_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Name__c</columns>
        <columns>FieloEE__Level__c</columns>
        <columns>FieloEE__MemberCode__c</columns>
        <columns>FieloEE__Age__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__LoyaltyAge__c</columns>
        <columns>FieloEE__StartDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__New_This_Week</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Name__c</columns>
        <columns>FieloEE__MemberCode__c</columns>
        <columns>FieloEE__Age__c</columns>
        <columns>FieloEE__Level__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__LoyaltyAge__c</columns>
        <columns>FieloEE__StartDate__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>FieloEE__BirthDate</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__Birthdate__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>FieloEE__Birthdate__c</errorDisplayField>
        <errorMessage>Birth date cannot be greater than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__CPF_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL( FieloEE__IdentificationType__c , &apos;CPF&apos; ) , NOT(
OR(
  LEN( FieloEE__IdentificationCode__c ) = 0,
  AND(
   LEN(FieloEE__IdentificationCode__c) = 14,
   CONTAINS(&quot;0123456789&quot;, LEFT(FieloEE__IdentificationCode__c, 1)),
   CONTAINS(&quot;0123456789&quot;, MID(FieloEE__IdentificationCode__c, 2, 1)),
   CONTAINS(&quot;0123456789&quot;, MID(FieloEE__IdentificationCode__c, 3, 1)),
   MID(FieloEE__IdentificationCode__c, 4, 1) = &quot;.&quot;,
   CONTAINS(&quot;0123456789&quot;, MID(FieloEE__IdentificationCode__c, 5, 1)),
   CONTAINS(&quot;0123456789&quot;, MID(FieloEE__IdentificationCode__c, 6, 1)),
   CONTAINS(&quot;0123456789&quot;, MID(FieloEE__IdentificationCode__c, 7, 1)),
   MID(FieloEE__IdentificationCode__c, 8, 1) = &quot;.&quot;,
   CONTAINS(&quot;0123456789&quot;, MID(FieloEE__IdentificationCode__c, 9, 1)),
   CONTAINS(&quot;0123456789&quot;, MID(FieloEE__IdentificationCode__c, 10, 1)),
   CONTAINS(&quot;0123456789&quot;, MID(FieloEE__IdentificationCode__c, 11, 1)),
   MID(FieloEE__IdentificationCode__c, 12, 1) = &quot;-&quot;,
   CONTAINS(&quot;0123456789&quot;, MID(FieloEE__IdentificationCode__c, 13, 1)),
   CONTAINS(&quot;0123456789&quot;, MID(FieloEE__IdentificationCode__c, 14, 1))
))))</errorConditionFormula>
        <errorMessage>invalid CPF  999.999.999-99
Ex.: 478.497.338-94</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloEE__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloEE__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloEE__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Modify_Member_Code</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(FieloEE__MemberCode__c)</errorConditionFormula>
        <errorDisplayField>FieloEE__MemberCode__c</errorDisplayField>
        <errorMessage>The member code cannot be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Operator_Password</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( FieloEE__Type__c,  &apos;Operator&apos; )&amp;&amp; (   ISBLANK(FieloEE__OperatorPassword__c)  ||  ISBLANK( FieloEE__OperatorCode__c ))</errorConditionFormula>
        <errorMessage>Operator Code and Operator password is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__RequiredCode</fullName>
        <active>true</active>
        <errorConditionFormula>( ISPICKVAL( FieloEE__IdentificationType__c, &apos;&apos; ) &amp;&amp; ( FieloEE__IdentificationCode__c != &apos;&apos; ) ) || ( ! ISPICKVAL( FieloEE__IdentificationType__c, &apos;&apos; ) &amp;&amp; ( FieloEE__IdentificationCode__c == &apos;&apos; ) )</errorConditionFormula>
        <errorMessage>You must complete Identification type and Identification Number or neither of both</errorMessage>
    </validationRules>
</CustomObject>